--- a/interface/profile.html
+++ b/interface/profile.html
@@ -19,12 +19,14 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>👤 Profil</h1>
-            <div class="nav-links">
-                    <a href="index.html" class="nav-link">📝 Créer un rapport</a>
-                    <a href="view.html" class="nav-link">📋 Voir mes rapports</a>
-                    <button class="nav-link logout-btn" onclick="handleLogout()">🚪 Déconnexion</button>
+            <div class="title">
+                <h1>Mon Profil</h1>
             </div>
+            <nav>
+                <a href="index.html" class="nav-link">📝 Créer un rapport</a>
+                <a href="view.html" class="nav-link">📋 Voir mes rapports</a>
+                <button class="nav-link logout-btn" onclick="handleLogout()">🚪 Déconnexion</button>
+            </nav>
         </div>
 
         <div id="statusMessage" class="status"></div>
