--- a/interface/index.html
+++ b/interface/index.html
@@ -10,18 +10,39 @@
     <link href="https://cdn.quilljs.com/1.3.7/quill.snow.css" rel="stylesheet">
     <script src="https://cdn.quilljs.com/1.3.7/quill.min.js"></script>
 
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Chokokutai&display=swap" rel="stylesheet">
+
+
     <link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body>
     <div class="container">
-        <div class="header-nav">
-            <h2>📝 Nouveau rapport</h2>
-            <div class="header-nav-links">
-                <a href="view.html" class="view-reports-link">📋 Voir mes rapports</a>
-                <a href="profile.html" class="view-reports-link">👤 Profil</a>
-                <button class="logout-btn" onclick="handleLogout()">🔗 Déconnexion</button>
+        <div class="header">
+            <div class="title">
+                <h1>Nouveau rapport</h1>
+                <p>
+                    <script>
+                        const formatter = new Intl.DateTimeFormat("en-GB", {
+                            weekday: 'long',
+                            year: 'numeric',
+                            month: 'short',
+                            day: 'numeric',
+                            hour: "numeric",
+                            minute: "numeric",
+                        });
+                        document.write(formatter.format(new Date()))
+                    </script>
+                </p>
             </div>
+            <nav>
+                <a href="view.html" class="nav-link">📋 Voir mes rapports</a>
+                <a href="profile.html" class="nav-link">👤 Profil</a>
+                <button class="logout-btn" onclick="handleLogout()">🔗 Déconnexion</button>
+            </nav>
         </div>
 
         <div class="title-card">
@@ -46,12 +67,13 @@
             <div id="editor"></div>
         </div>
 
+        <div class="status" id="status"></div>
+
         <div class="actions">
             <button id="submitBtn" class="primary">✓ Envoyer le rapport</button>
             <button id="previewBtn" class="secondary" style="display: none;">👁 Aperçu</button>
         </div>
 
-        <div class="status" id="status"></div>
         <div class="meta" id="meta"></div>
     </div>
 
