--- a/interface/index.html
+++ b/interface/index.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="title-card">
-            <input id="title" placeholder="Titre du rapport" />
+            <input id="title" placeholder="Titre du rapport" required/>
         </div>
 
         <div class="form-row">
