--- a/interface/profile.html
+++ b/interface/profile.html
@@ -24,7 +24,7 @@
             </div>
             <nav>
                 <a href="index.html" class="nav-link">📝 Créer un rapport</a>
-                <a href="view.html" class="nav-link">📋 Voir mes rapports</a>
+                <a href="view.html" class="nav-link" id="view-reports-link">📋 Voir mes rapports</a>
                 <button class="nav-link logout-btn" onclick="handleLogout()">🚪 Déconnexion</button>
             </nav>
         </div>
@@ -88,6 +88,11 @@
                     return;
                 }
 
+                if (userProfile.role === "Administrator"){
+                    document.querySelector("#view-reports-link").textContent = "Voir les Rapports Soumis"
+                }
+
+
                 currentProfileData = userProfile;
                 renderProfileForm();
             } catch (error) {
@@ -117,7 +122,12 @@
                 <form id="profileForm">
                     <div class="form-group">
                         <label for="username">Nom d'utilisateur</label>
-                        <input type="text" id="username" value="${user.username || ''}" placeholder="Entrez le nom d'utilisateur" readonly>
+                        <input type="text" id="username" value="${user.username || ''}" placeholder="Entrez votre nom d'utilisateur" readonly>
+                    </div>
+                    
+                    <div class="form-group">
+                        <label for="username">Nom Complet</label>
+                        <input type="text" id="username" value="${user.fullname || ''}" placeholder="Entrez votre nom complet" readonly>
                     </div>
 
                     <div class="form-group">
@@ -127,7 +137,7 @@
 
                     <div class="form-group">
                         <label for="phone">Téléphone</label>
-                        <input type="tel" id="phone" value="${user.phone || ''}" placeholder="Entrez le numéro de téléphone" readonly>
+                        <input type="tel" id="phone" value="${user.phone || ''}" placeholder="Entrez votre numéro de téléphone" readonly>
                     </div>
 
                     <div class="form-group">
