--- a/interface/profile.html
+++ b/interface/profile.html
@@ -122,12 +122,12 @@
                 <form id="profileForm">
                     <div class="form-group">
                         <label for="username">Nom d'utilisateur</label>
-                        <input type="text" id="username" value="${user.username || ''}" placeholder="Entrez votre nom d'utilisateur" readonly>
+                        <input type="text" id="username" value="${user.username || ''}" placeholder="Entrez votre nom d'utilisateur">
                     </div>
                     
                     <div class="form-group">
                         <label for="username">Nom Complet</label>
-                        <input type="text" id="username" value="${user.fullname || ''}" placeholder="Entrez votre nom complet" readonly>
+                        <input type="text" id="username" value="${user.fullname || ''}" placeholder="Entrez votre nom complet">
                     </div>
 
                     <div class="form-group">
@@ -137,15 +137,15 @@
 
                     <div class="form-group">
                         <label for="phone">Téléphone</label>
-                        <input type="tel" id="phone" value="${user.phone || ''}" placeholder="Entrez votre numéro de téléphone" readonly>
+                        <input type="tel" id="phone" value="${user.phone || ''}" placeholder="Entrez votre numéro de téléphone">
                     </div>
 
                     <div class="form-group">
                         <label for="role">Rôle</label>
-                        <input type="text" id="role" value="${roleDisplay}" readonly>
+                        <input type="text" id="role" value="${roleDisplay}">
                     </div>
 
-                    <div class="form-actions" style="display: none">
+                    <div class="form-actions">
                         <button type="submit" class="btn btn-save">💾 Enregistrer</button>
                         <button type="button" class="btn btn-cancel" onclick="window.location.href='index.html'">Annuler</button>
                     </div>
